# discogs_pypi

./: README.md
discogs_pypi/: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
discogs_pypi/discogs_pypi/: discogs_module.py
discogs_pypi/docs/: Makefile  conf.py  installation.rst  make.bat
discogs_pypi/docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
discogs_pypi/docs/_build/doctrees/source/: discogs_pypi.doctree  modules.doctree
discogs_pypi/docs/_build/html/: conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
discogs_pypi/docs/_build/html/_modules/: index.html
discogs_pypi/docs/_build/html/_modules/discogs_pypi/: discogs_module.html
discogs_pypi/docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
discogs_pypi/docs/_build/html/source/: discogs_pypi.html  modules.html
discogs_pypi/docs/source/: discogs_pypi.rst  modules.rst
discogs_pypi/tests/: test_discogs_pypi.py
discogs_pypi/vignette/: discogs_module_vignette.ipynb
