[tool.poetry]
name = "discogs-pypi"
version = "0.1.0"
description = "This package contains several functions related to collecting data related to music releases from Discogs."
authors = ["Camilla Zhang <94077724+camilla-zhang@users.noreply.github.com>"]
license = "1"
readme = "README.md"
packages = [{include = "discogs_pypi"}]

[tool.poetry.dependencies]
python = "^3.8"
oauth2 = "^1.9.0.post1"
requests = "^2.28.1"
selenium = "^4.7.2"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinx = "^5.3.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
